# advent-of-code-2024

./: .gitignore  Cargo.toml
day_1/: input
day_1/part_1/: Cargo.toml
day_1/part_1/src/: main.rs
day_1/part_2/: Cargo.toml
day_1/part_2/src/: main.rs
day_10/part_1/: Cargo.toml
day_10/part_1/src/: main.rs
day_10/part_2/: Cargo.toml
day_10/part_2/src/: main.rs
day_11/part_1/: Cargo.toml
day_11/part_1/src/: main.rs
day_11/part_2/: Cargo.toml
day_11/part_2/src/: main.rs
day_12/part_1/: Cargo.toml
day_12/part_1/src/: main.rs
day_12/part_2/: Cargo.toml
day_12/part_2/src/: main.rs
day_13/part_1/: Cargo.toml
day_13/part_1/src/: main.rs
day_13/part_2/: Cargo.toml
day_13/part_2/src/: main.rs
day_2/part_1/: Cargo.toml
day_2/part_1/src/: main.rs
day_2/part_2/: Cargo.toml
day_2/part_2/src/: main.rs
day_3/part_1/: Cargo.toml
day_3/part_1/src/: main.rs
day_3/part_2/: Cargo.toml
day_3/part_2/src/: main.rs
day_4/part_1/: Cargo.toml
day_4/part_1/src/: main.rs
day_4/part_2/: Cargo.toml
day_4/part_2/src/: main.rs
day_5/part_1/: Cargo.toml
day_5/part_1/src/: main.rs
day_5/part_2/: Cargo.toml
day_5/part_2/src/: main.rs
day_6/part_1/: Cargo.toml
day_6/part_1/src/: main.rs
day_6/part_2/: Cargo.toml
day_6/part_2/src/: main.rs
day_7/part_1/: Cargo.toml
day_7/part_1/src/: main.rs
day_7/part_2/: Cargo.toml
day_7/part_2/src/: main.rs
day_8/part_1/: Cargo.toml
day_8/part_1/src/: main.rs
day_8/part_2/: Cargo.toml
day_8/part_2/src/: main.rs
day_9/part_1/: Cargo.toml
day_9/part_2/: Cargo.toml
(+2 files in other folders)
